# ProbZero

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  arena.py  auto_loop.py  convert_pt.py  elo_estimation.py  master.py  train.py  worker.py
5x5_othello_models/: model_iter_100.pt  model_iter_200.pt  model_iter_250.pt  model_iter_350.pt  model_iter_400.pt  model_iter_50.pt  weights_iter_250.pth  weights_iter_300.pth
ProbZero4x4/models/0_eps/: model_iter_0.pt  model_iter_10.pt  model_iter_100.pt  model_iter_20.pt  model_iter_30.pt  model_iter_70.pt  model_iter_80.pt
ProbZero4x4/models/with_eps/: model_iter_0.pt  model_iter_10.pt  model_iter_100.pt  model_iter_110.pt  model_iter_20.pt  model_iter_30.pt  model_iter_40.pt  model_iter_50.pt  model_iter_60.pt  model_iter_70.pt  model_iter_80.pt  model_iter_90.pt
ProbZero4x4/scripts/: train.py
ProbZero4x4/src/: game.hpp  main.cpp  mcts.cpp  mcts.hpp  model.hpp  node.hpp  play.cpp  selfplay.hpp
ProbZero6x6/: CMakeLists.txt  README.md
ProbZero6x6/models/0_eps/: model_iter_0(2).pt  model_iter_10(2).pt  model_iter_20(1).pt  model_iter_30(1).pt  model_iter_40(1).pt  model_iter_50(3).pt  model_iter_60(1).pt  model_iter_70(2).pt  model_iter_80(1).pt
ProbZero6x6/models/with_eps/: model_iter_0(1).pt  model_iter_10(1).pt  model_iter_20.pt  model_iter_30.pt  model_iter_40.pt  model_iter_50(2).pt  model_iter_60.pt  model_iter_70(1).pt  model_iter_80.pt
ProbZero6x6/scripts/: run.py  train.py
ProbZero6x6/src/: game.hpp  main.cpp  mcts.cpp  mcts.hpp  model.hpp  node.hpp  play.cpp  selfplay.hpp
models/: model_iter_150.pt  model_iter_300.pt  weights_iter_100.pth  weights_iter_150.pth  weights_iter_200.pth  weights_iter_350.pth  weights_iter_400.pth  weights_iter_50.pth
models/4x4/0_eps/: model_iter_110.pt  model_iter_120.pt  model_iter_40.pt  model_iter_50.pt  model_iter_60.pt  model_iter_90.pt
results/: elo_results.txt
scripts/: elo_estimation.py  run.py  train.py
src/: game.hpp  main.cpp  mcts.cpp  mcts.hpp  model.hpp  node.hpp  play.cpp  selfplay.hpp
